Added pro sections.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -55,7 +55,8 @@
         </div>
       </div>
     </nav>
-    <section class='fade-scroll' display='block' id='intro'>
+
+    <section id='intro'class='fade-scroll' display='block' >
       <div style='justify-content: center' class="container">
         <div style='justify-content: center;' class="row">
         </div>
@@ -97,9 +98,11 @@
         </div>
       </div>
     </section>
+
     <div style='border-top: solid; border-color: white;'>
     </div>
-    <section class='fade-scroll' style='display: none' id='newToAnalytics'>
+
+    <section id='newToAnalytics' class='fade-scroll' style='display: none' >
       <div style='justify-content: center' class="container">
         <div style='justify-content: center;' class="row">
         </div>
@@ -161,7 +164,6 @@
           <div class="col-lg-1">
           </div>
         </div>
-
       </div>
         <br>
       </div>
@@ -169,8 +171,56 @@
 
     <div style='border-top: solid; border-color: white;'>
     </div>
-    <section style='display: none; background-color: rgba(117, 226, 117, 0.685);'
-    class='fade-scroll' id='Tableau'>
+
+    <section id='Tableau' style='display: none; background-color: white;'
+      class='fade-scroll' >
+      <div class="card-deck mb-3 text-center">
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Tableau</h4>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled mt-3 mb-4">
+              <li style='font-weight: bold'>Tableau Desktop (Certified 10.1)</li>
+              <li>-Data Visualization</li>
+              <li>-Report Development</li>
+              <br>
+              <li style='font-weight: bold'>Tableau Server</li>
+                <li>-Administration</li>
+                <li>-Publishing</li>
+                <li>-Automation</li>
+              <br>
+              <li style='font-weight: bold'>Tableau JavaScript API</li>
+              <li>-Custom enterprise portals</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-primary">Learn More</button>
+          </div>
+        </div>
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Your Pro</h4>
+          </div>
+          <div class="card-body">
+            <div style='margin: 0 auto' class="col-lg-4">
+            <img class="rounded-circle" src="../images/bens.png" alt="" width="140" height="140">
+          </div>
+          <h5>Ben M. Newell, MBA </h5>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>6+ years Development/Training experience</li>
+              <li>2 years Tableau Server customer support</li>
+            </ul>
+            <h1 class="card-title pricing-card-title">$125 <small class="text-muted">/ hr</small></h1>
+            <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div style='border-top: solid; border-color: white;'>
+    </div> 
+
+    <section id='TableauDetails' style='display: none; background-color: rgba(117, 226, 117, 0.685);'
+      class='fade-scroll' >
           <div style='justify-content: center' class="container">
         <div style='justify-content: center;' class="row">
         </div>
@@ -224,10 +274,59 @@
         <br>
       </div>
     </section>
+
     <div style='border-top: solid; border-color: white;'>
-    </div>    
-    <section style='display: none; background-color: rgba(224, 80, 80, 0.671);'
-    class='fade-scroll' id='Oracle'>
+    </div>
+
+    <section id='Oracle' style='display: none; background-color: white;'
+      class='fade-scroll' >
+      <div class="card-deck mb-3 text-center">
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Tableau</h4>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled mt-3 mb-4">
+              <li style='font-weight: bold'>Tableau Desktop (Certified 10.1)</li>
+              <li>-Data Visualization</li>
+              <li>-Report Development</li>
+              <br>
+              <li style='font-weight: bold'>Tableau Server</li>
+                <li>-Administration</li>
+                <li>-Publishing</li>
+                <li>-Automation</li>
+              <br>
+              <li style='font-weight: bold'>Tableau JavaScript API</li>
+              <li>-Custom enterprise portals</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-primary">Learn More</button>
+          </div>
+        </div>
+        <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Your Pro</h4>
+          </div>
+          <div class="card-body">
+            <div style='margin: 0 auto' class="col-lg-4">
+            <img class="rounded-circle" src="../images/zach.PNG" alt="" width="140" height="140">
+          </div>
+          <h5>Zach T. Newell, MBA </h5>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Oracle Analytics Cloud</li>
+              <li>5+ years of experience administrating OBIEE </li>
+            </ul>
+            <h1 class="card-title pricing-card-title">$125 <small class="text-muted">/ hr</small></h1>
+            <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div style='border-top: solid; border-color: white;'>
+    </div> 
+
+    <section id='OracleDetail' style='display: none; background-color: rgba(224, 80, 80, 0.671);'
+      class='fade-scroll' id='Oracle'>
           <div style='justify-content: center' class="container">
         <div style='justify-content: center;' class="row">
         </div>
@@ -294,9 +393,11 @@
         <br>
       </div>
     </section>
+
     <div style='border-top: solid; border-color: white;'>
     </div>
-    <section class='fade-scroll' display='block' id='about'>
+
+    <section id='about' class='fade-scroll' display='block' >
       <div style='justify-content: center' class="container">
         <div style='justify-content: center;' class="row">
         </div>
@@ -360,8 +461,10 @@
         </div>
       </div>
     </section>
+
     <div style='border-top: solid; border-color: white;'>
     </div>
+
     <footer>     
       <div class="container">
         <p>&copy; Created by Lift LLC. All Rights Reserved.</p>
