--- a/views/index.hbs
+++ b/views/index.hbs
@@ -357,7 +357,7 @@
       <div class="card-deck mb-3 text-center">
         <div class="card mb-4 box-shadow">
           <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Tableau</h4>
+            <h4 class="my-0 font-weight-normal">Oracle</h4>
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
