add spacing in intro buttons

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -85,10 +85,12 @@
           <div class='row' style='height: 10px'>
           </div>
           <div class='row'>
-            <button onClick= 'showTableau()' style="font-size: 15px; height: 50px; width:300px; color: rgb(46, 185, 46)" type="button" class="btn btn-light">Tableau</button>
-          <div style='width: 10px'>
-          </div>
-            <button onClick= 'showOracle()' style="font-size: 15px; height: 50px; width:300px; color: red" type="button" class="btn btn-dark">Oracle</button>
+            <div style='padding-top: 10px'>
+              <button onClick= 'showTableau()' style="font-size: 15px; height: 50px; width:300px; color: rgb(46, 185, 46)" type="button" class="btn btn-light">Tableau</button>
+            </div>
+            <div style='padding-top: 10px'>
+              <button onClick= 'showOracle()' style="font-size: 15px; height: 50px; width:300px; color: red" type="button" class="btn btn-dark">Oracle</button>
+            </div>
           </div>
         </div>
         <br>
