add spacing in intro buttons

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -86,10 +86,10 @@
           </div>
           <div class='row'>
             {{!-- <div style='padding-top: 10px'> --}}
-              <button onClick= 'showTableau()' style="padding-top: 10px font-size: 15px; height: 50px; width:300px; color: rgb(46, 185, 46)" type="button" class="btn btn-light">Tableau</button>
+              <button onClick= 'showTableau()' style="padding-top: 10px; font-size: 15px; height: 50px; width:300px; color: rgb(46, 185, 46)" type="button" class="btn btn-light">Tableau</button>
             {{!-- </div> --}}
             {{!-- <div style='padding-top: 10px'> --}}
-              <button onClick= 'showOracle()' style="padding-top: 10px font-size: 15px; height: 50px; width:300px; color: red" type="button" class="btn btn-dark">Oracle</button>
+              <button onClick= 'showOracle()' style="padding-top: 10px; font-size: 15px; height: 50px; width:300px; color: red" type="button" class="btn btn-dark">Oracle</button>
             {{!-- </div> --}}
           </div>
         </div>
