Add Previous Engagements

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -433,8 +433,16 @@
                  Founder / Tableau Consultant
                 </p>
                 <p>
-                  Ben completed his MBA at Rockhurst University (AACSB). He has focused his time and effort on Business Intelligence. Acquiring  best practices from three well known entities in Kansas City.
+                  Ben has been a student of the Business Intelligence space for 5+ years and recently added Full Stack Web Development to his qualifications. He is versed in the Tableau Suite and obtained his Tableau Desktop 10.1 Qualified Associates certification. Loves to discuss strategy, business objectives, and user experience.
                 </p>
+                <button onClick= 'showBenEngagements()' style="padding-top: 10px; font-size: 15px; height: 50px; width:300px" type="button" class="btn btn-light">
+                  Previous Engagements
+                </button>
+                <div id='benEngagements' style='display: none;'>
+                    </p>- Tableau Consultant (Tableau Suite)</p>
+	                  </p>- Tableau Server Technical Analyst IV / Support (Tableau Suite)</p>
+	                  </p>- Associate Business Data Specialist (SQL, ETL, Tableau Desktop) </p>
+                </div>
               </div>
             </div>
           </div>
@@ -451,8 +459,16 @@
                   Founder / Oracle Consultant
                 </p>
                 <p>
-                  Zach brings a sound VBA and BI background to the team with over 4 years of dashboard development and automation experience. He also completed his MBA at Rockhurst University (AACSB).
+                  Zach brings 5+ years of Oracle BI implementation experience to the team! He is certified in Oracle Analytics Cloud and is heavily experienced with OBIEE 11g and 12c. During his BI projects he loves to spend time discussing the overall enterprise strategy towards reporting, data quality, and system integration.
                 </p>
+                <button onClick= 'showZachEngagements()' style="padding-top: 10px; font-size: 15px; height: 50px; width:300px" type="button" class="btn btn-light">
+                  Previous Engagements
+                </button>
+                <div id='zachEngagements' style='display: none;'>
+                  	</p>- Oracle Insight & Cloud Strategy Program Manager</p>
+	                  </p>- Senior Business Intelligence Analyst</p>
+	                  </p>- Business Systems Analyst</p>
+                </div>
               </div>
             </div>
           </div>
