update zach pro section.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -269,7 +269,7 @@
               <li>6+ years Development/Training experience</li>
               <li>2 years Tableau Server customer support</li>
             </ul>
-            <h1 class="card-title pricing-card-title">$125 <small class="text-muted">/ hr</small>
+            <h1 class="card-title pricing-card-title">$90 <small class="text-muted">/ hr</small>
             </h1>
             <button onclick="benConsulting()" type="button" class="btn btn-lg btn-block btn-primary" href="https://benmnewell.wixsite.com/website">Get started</button>
             
@@ -362,17 +362,32 @@
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
-              <li style='font-weight: bold'>Oracle Analytics Cloud</li>
+              <li style='font-weight: bold'>Oracle Analytics Cloud (OAC)</li>
               <li>-Data Visualization</li>
               <li>-Report Development</li>
+              <li>-Dashboard Creation</li>
+              <li>-Automated Notifications</li>
+              <li>-Data Integration</li>
+              <li>-Data Modeling</li>
+              <li>-Mobile Capability</li>
               <br>
-              <li style='font-weight: bold'>OBIEE</li>
+              <li style='font-weight: bold'>OBIEE (now packaged with Data Visualizer into the product OAC)</li>
               <li>-Data Visualization</li>
               <li>-Report Development</li>
-                <li>-Automation</li>
+              <li>-Dashboard Creation</li>
+              <li>-Automated Notifications</li>
+              <li>-Data Integration</li>
+              <li>-Data Modeling</li>
               <br>
-              <li style='font-weight: bold'>APEX</li>
-              <li>-Application Development</li>
+              <li style='font-weight: bold'>Data Visualizer (now packaged with OBIEE into the product OAC)</li>
+              <li>-Data Visualization</li>
+              <li>-Dashboard Creation</li>
+              {{!-- <br>
+              <li style='font-weight: bold'>Other Oracle Solutions</li>
+              <li>-Moving databases to Oracle Cloud (or new databases)
+</li>
+              <li>-Utilizing Oracle Cloud storage for files</li>
+              <li>-More, more, more! Oracle Cloud has many other solutions!</li> --}}
             </ul>
             <button onClick='ShowOracleDetail()'  type="button" class="btn btn-lg btn-block btn-primary">Learn More</button>
           </div>
@@ -390,7 +405,7 @@
               <li>Oracle Analytics Cloud</li>
               <li>5+ years of experience administrating OBIEE </li>
             </ul>
-            <h1 class="card-title pricing-card-title">$125 <small class="text-muted">/ hr</small></h1>
+            <h1 class="card-title pricing-card-title">$90 <small class="text-muted">/ hr</small></h1>
             <button onclick="zachConsulting()" type="button" class="btn btn-lg btn-block btn-primary" >Get started</button>
           </div>
         </div>
