update zach pro section.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -241,14 +241,17 @@
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
-              <li style='font-weight: bold'>Tableau Desktop (Certified 10.1)</li>
+              <li style='font-weight: bold'>Tableau Desktop</li>
               <li>-Data Visualization</li>
               <li>-Report Development</li>
+              <li>-Data Exploration</li>
               <br>
               <li style='font-weight: bold'>Tableau Server</li>
                 <li>-Administration</li>
                 <li>-Publishing</li>
                 <li>-Automation</li>
+                <li>-Mobile distribution</li>
+                <li>-Email subscriptions</li>
               <br>
               <li style='font-weight: bold'>Tableau JavaScript API</li>
               <li>-Custom enterprise portals</li>
@@ -267,6 +270,11 @@
           <h5>Ben M. Newell, MBA </h5>
             <ul class="list-unstyled mt-3 mb-4">
               <li>6+ years Development/Training experience</li>
+              <br>
+              <li>
+                <a href="https://www.tableau.com/support/certification">Tableau Desktop 10.1 Qualified Associate</a> 
+              </li>
+              <br>
               <li>2 years Tableau Server customer support</li>
             </ul>
             <h1 class="card-title pricing-card-title">$90 <small class="text-muted">/ hr</small>
@@ -402,7 +410,12 @@
           </div>
           <h5>Zach T. Newell, MBA </h5>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>Oracle Analytics Cloud</li>
+              <li>Oracle Analytics Cloud / OBIEE</li>
+              <br>
+              <li>
+                <a href="https://www.youracclaim.com/badges/52100f14-c821-4742-80ec-622885c9a2a5/public_url">Oracle Cloud Platform Enterprise Analytics 2018 Certified Associate</a> 
+              </li>
+              <br>
               <li>5+ years of experience administrating OBIEE </li>
             </ul>
             <h1 class="card-title pricing-card-title">$90 <small class="text-muted">/ hr</small></h1>
