fix engagement buttons.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -393,7 +393,7 @@
               {{!-- <br>
               <li style='font-weight: bold'>Other Oracle Solutions</li>
               <li>-Moving databases to Oracle Cloud (or new databases)
-</li>
+              </li>
               <li>-Utilizing Oracle Cloud storage for files</li>
               <li>-More, more, more! Oracle Cloud has many other solutions!</li> --}}
             </ul>
@@ -463,9 +463,12 @@
                 <p>
                   Ben has been a student of the Business Intelligence space for 5+ years and recently added Full Stack Web Development to his qualifications. He is versed in the Tableau Suite and obtained his Tableau Desktop 10.1 Qualified Associates certification. Loves to discuss strategy, business objectives, and user experience.
                 </p>
-                <button onClick= 'showBenEngagements()' style="padding-top: 10px; font-size: 15px; height: 50px; width:300px" type="button" class="btn btn-light">
-                  Previous Engagements
-                </button>
+                <div class='row'>
+                  <button onClick= 'showBenEngagements()' style="padding-top: 10px; font-size: 15px; height: 50px; width:300px" type="button" class="btn btn-light">
+                    Previous Engagements
+                  </button>
+                  <br>
+                </div>
                 <div id='benEngagements' style='display: none;'>
                     </p>- Tableau Consultant (Tableau Suite)</p>
 	                  </p>- Tableau Server Technical Analyst IV / Support (Tableau Suite)</p>
@@ -489,9 +492,12 @@
                 <p>
                   Zach brings 5+ years of Oracle BI implementation experience to the team! He is certified in Oracle Analytics Cloud and is heavily experienced with OBIEE 11g and 12c. During his BI projects he loves to spend time discussing the overall enterprise strategy towards reporting, data quality, and system integration.
                 </p>
-                <button onClick= 'showZachEngagements()' style="padding-top: 10px; font-size: 15px; height: 50px; width:300px" type="button" class="btn btn-light">
-                  Previous Engagements
-                </button>
+                <div class='row'>
+                  <button onClick= 'showZachEngagements()' style="padding-top: 10px; font-size: 15px; height: 50px; width:300px" type="button" class="btn btn-light">
+                    Previous Engagements
+                  </button>
+                  <br>
+                </div>
                 <div id='zachEngagements' style='display: none;'>
                   	</p>- Oracle Insight & Cloud Strategy Program Manager</p>
 	                  </p>- Senior Business Intelligence Analyst</p>
