fix landing buttons.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -80,14 +80,14 @@
             MISSION | PROVIDE LIFT<br><br>
           </h3>
           <div href="#about" class='row'>
-            <button  onClick='showNewToAnalytics()'style=" height: 50px; width:300px" type="button" class="btn btn-block btn-light">New to Data/Analytics?</button>
+            <button  onClick='showNewToAnalytics()'style="font-size:15px; height: 50px; width:300px" type="button" class="btn btn-block btn-light">New to Data/Analytics?</button>
           </div>
           <div class='row' style='height: 10px'>
           </div>
           <div class='row'>
             {{!-- <div style='padding-top: 10px'> --}}
               <button onClick= 'showTableau()' style="padding-top: 10px; height: 50px; width:300px; color: rgb(46, 185, 46)" type="button" class="btn btn-lg btn-block btn-light">Tableau</button>
-              <div style='height: 10px'></div>
+              <div style='height: 10px'></div> &nbsp;
               <button onClick= 'showOracle()' style="padding-top: 10px; height: 50px; width:300px; color: red" type="button" class="btn btn-lg btn-block btn-dark">Oracle</button>
             {{!-- </div> --}}
           </div>
