fix landing buttons.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -80,8 +80,8 @@
             MISSION | PROVIDE LIFT<br><br>
           </h3>
           <div href="#about" class='row'>
-            <button  onClick='showNewToAnalytics()'style="font-size:15px; height: 50px; width:300px" type="button" class="btn btn-block btn-light">New to Data/Analytics?</button>
-          </div>
+            <button  onClick='showNewToAnalytics()'style="font-size:13px; height: 50px; width:300px" type="button" class="btn btn-block btn-light">New to Data/Analytics?</button>
+          </div>&nbsp;
           <div class='row' style='height: 10px'>
           </div>
           <div class='row'>
