--- a/views/index.hbs
+++ b/views/index.hbs
@@ -103,7 +103,7 @@
     <div style='border-top: solid; border-color: white;'>
     </div>
 
-    <section id='newToAnalytics' class='fade-scroll' style='display: none' >
+    <section id='newToAnalytics' class='fade-scroll' style='background-color: white; display: none' >
       <div style='justify-content: center' class="container">
         <div style='justify-content: center;' class="row">
         </div>
@@ -111,7 +111,7 @@
         <br>
         <br> 
         <div>
-          <h1 id='title' style='color: #1B1B1E'>
+          <h1 id='title' style='color: #1F7FC3'>
             NEW TO ANALYTICS
           </h1>
         </div>
@@ -119,50 +119,73 @@
 
         <!-- Three columns of text below the carousel -->
         <div class="row">
-          <div class="col-lg-1">
+          {{!-- <div class="col-lg-1">
+          </div> --}}
+          <div class="col-lg-2">
+            <div class='row'>
+              <i  class="fa fa-file-text fa-2x" style='color: #1F7FC3'></i>&nbsp;&nbsp;
+              &nbsp;
+              <h3>Data Sources</h3>
+            </div>
+            <p>Data is the most important asset for businesses today. Whether you are pointing to text files, excel, SQL databases, NoSQL databases, API we are here to help. </p>   
+            <div style='margin: auto; width: 60%; heigth: 1px; border-top: solid; border-color: #1F7FC3;'>
+            </div>
+            <div style='height: 15px'>
+            </div>
           </div>
           <div class="col-lg-2">
-            <div class=''>
-              <i  class="fa fa-file-text fa-3x"></i>&nbsp;&nbsp;
+            <div class='row'>
+              <i  class="fa fa-database fa-2x" style='color: #1F7FC3'></i>&nbsp;&nbsp;
+              &nbsp;
+              <h3>Data Storage</h3>
             </div>
-            <h3>1. Data Sources</h3>
-            <p>Data is the most important asset for businesses today. Whether you are pointing to text files, excel, SQL databases, NoSQL databases, API we are here to help. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
-          </div>
-          <div class="col-lg-2">
-            <div class=''>
-              <i  class="fa fa-database fa-3x"></i>
-            </div>
-            <h3>2. Data Storage</h3>
             <p>Once the important data is identified and connected, identify a solution to house that data for easy access and manipulation.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            <div style='margin: auto; width: 60%; heigth: 1px; border-top: solid; border-color: #1F7FC3;'>
+            </div>
+            <div style='height: 15px'>
+            </div>
           </div>
           <div class="col-lg-2">
-            <div class=''>
-              <i  class="fa fa-filter fa-3x"></i>
+            <div class='row'>
+              <i  class="fa fa-filter fa-2x" style='color: #1F7FC3'></i>&nbsp;&nbsp;
+              &nbsp;
+              <h3>Data Prep</h3>
             </div>            
-            <h3>3. Data Prep</h3>
             <p>Not all data sources are formatted to perfection. There are plenty of tools out there to extract, transform, and load your data in perfect form.  </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            <div style='margin: auto; width: 60%; heigth: 1px; border-top: solid; border-color: #1F7FC3;'>
+            </div>
+            <div style='height: 15px'>
+            </div> 
           </div>
           <div class="col-lg-2">
-            <div class=''>
-              <i  class="fa fa-bar-chart fa-3x"></i>&nbsp;&nbsp;
-              <i  class="fa fa-pie-chart fa-3x"></i>
+            <div class='row'>
+              <i  class="fa fa-bar-chart fa-2x" style='color: #1F7FC3'></i>&nbsp;&nbsp;
+              &nbsp;
+              <h3>Data Visualization</h3>
             </div>           
-            <h3>4. Data Visualization</h3>
             <p>The human mind does not easily consume data in a table. Pull out KPIs and visually represent it. LiftKC uses cutting edge data visualization tools to create, automate, and present data on the fly and in a professional manner.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            
+            <div style='margin: auto; width: 60%; heigth: 1px; border-top: solid; border-color: #1F7FC3;'>
+            </div>
+            <div style='height: 15px'>
+            </div>
           </div>
           <div class="col-lg-2">
-            <div class=''>
-              <i  class="fa fa-users fa-3x"></i>&nbsp;&nbsp;
+            <div class='row'>
+              <i  class="fa fa-users fa-2x" style='color: #1F7FC3'></i>&nbsp;&nbsp;
+              &nbsp;
+              <h3>Distribution</h3>
             </div>            
-            <h3>5. Distribution</h3>
             <p>Keep your end users in mind by putting distribution methods in place early. LiftKC will help you utilize Oracle, Tableau, or custom websites to give your customers insights on demand.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            <div style='margin: auto; width: 60%; heigth: 1px; border-top: solid; border-color: #1F7FC3;'>
+            </div>
+            <div style='height: 15px'>
+            </div>
           </div>
-          <div class="col-lg-1">
+          {{!-- <div class="col-lg-1">
+          </div> --}}
+          <div style='width: 100%'>
+              <button  onClick='showNewToAnalytics()'style="background: #1F7FC3; border: 2px solid white; color: white; margin: auto; font-size:13px; height: 50px; width:50%" type="button" class="btn btn-block btn-primary">HIDE</button>
           </div>
         </div>
       </div>
@@ -196,7 +219,7 @@
             </div>
             <h3>1. Tableau Prep</h3>
             <p>Getting those dispurse datasources together can be complicated. Tableau Prep allows you to join and transform your datasets exactly how you need them. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            
           </div>
           <div class="col-lg-3">
             <div class=''>
@@ -204,7 +227,7 @@
             </div>
             <h3>2. Tableau Desktop</h3>
             <p>Once your data is ready, point Tableau Desktop to your data for visual insights.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            
           </div>
           <div class="col-lg-3">
             <div class=''>
@@ -212,7 +235,7 @@
             </div>            
             <h3>3. Tableau Server</h3>
             <p>Not all data sources are formatted to perfection. There are plenty of tools out there to extract, transform, and load your data in perfect form.  </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            
           </div>
           <div class="col-lg-3">
             <div class=''>
@@ -220,7 +243,7 @@
             </div>            
             <h3>3. Tableau Portal</h3>
             <p>Not all data sources are formatted to perfection. There are plenty of tools out there to extract, transform, and load your data in perfect form.  </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            
           </div>
         </div>
 
@@ -314,7 +337,7 @@
             </div>
             <h3>1. Data Sources</h3>
             <p>Data is the most important asset for businesses today. Whether you are pointing to text files, excel, SQL databases, NoSQL databases, API we are here to help. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            
           </div>
           <div class="col-lg-2">
             <div class=''>
@@ -322,7 +345,7 @@
             </div>
             <h3>2. Data Storage</h3>
             <p>Once the important data is identified and connected, identify a solution to house that data for easy access and manipulation.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            
           </div>
           <div class="col-lg-2">
             <div class=''>
@@ -330,7 +353,7 @@
             </div>            
             <h3>3. Data Prep</h3>
             <p>Not all data sources are formatted to perfection. There are plenty of tools out there to extract, transform, and load your data in perfect form.  </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            
           </div>
           <div class="col-lg-2">
             <div class=''>
@@ -339,7 +362,7 @@
             </div>           
             <h3>4. Data Visualization</h3>
             <p>The human mind does not easily consume data in a table. Pull out KPIs and visually represent it. LiftKC uses cutting edge data visualization tools to create, automate, and present data on the fly and in a professional manner.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            
           </div>
           <div class="col-lg-2">
             <div class=''>
@@ -347,7 +370,7 @@
             </div>            
             <h3>5. Distribution</h3>
             <p>Keep your end users in mind by putting distribution methods in place early. LiftKC will help you utilize Oracle, Tableau, or custom websites to give your customers insights on demand.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+            
           </div>
           <div class="col-lg-1">
           </div>
