add the sickest nav actions

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -127,7 +127,7 @@
               &nbsp;
               <h3>Data Sources</h3>
             </div>
-            <p>Data is the most important asset for businesses today. Whether you are pointing to text files, excel, SQL databases, NoSQL databases, API we are here to help. </p>   
+            <p>Data is the most important asset for businesses today. Whether you are pointing to text files, excel, SQL databases, NoSQL databases, or APIs we are here to help. </p>   
             <div style='margin: auto; width: 60%; heigth: 1px; border-top: solid; border-color: #1F7FC3;'>
             </div>
             <div style='height: 15px'>
