--- a/views/index.hbs
+++ b/views/index.hbs
@@ -87,7 +87,7 @@
           <div class='row'>
             {{!-- <div style='padding-top: 10px'> --}}
               <button onClick= 'showTableau()' style="padding-top: 10px; height: 50px; width:300px; color: rgb(46, 185, 46)" type="button" class="btn btn-lg btn-block btn-light">Tableau</button>
-              <div style='height: 10px'></div> &nbsp;
+              <div id='oracleButton' style='height: 10px'></div> &nbsp;
               <button onClick= 'showOracle()' style="padding-top: 10px; height: 50px; width:300px; color: red" type="button" class="btn btn-lg btn-block btn-dark">Oracle</button>
             {{!-- </div> --}}
           </div>
@@ -279,7 +279,7 @@
               <li style='font-weight: bold'>Tableau JavaScript API</li>
               <li>-Custom enterprise portals</li>
             </ul>
-            <button onClick='showTableauDetail()' type="button" class="btn btn-lg btn-block btn-primary">Learn More</button>
+            {{!-- <button onClick='showTableauDetail()' type="button" class="btn btn-lg btn-block btn-primary">Learn More</button> --}}
           </div>
         </div>
         <div class="card mb-4 box-shadow">
@@ -420,7 +420,7 @@
               <li>-Utilizing Oracle Cloud storage for files</li>
               <li>-More, more, more! Oracle Cloud has many other solutions!</li> --}}
             </ul>
-            <button onClick='ShowOracleDetail()'  type="button" class="btn btn-lg btn-block btn-primary">Learn More</button>
+            {{!-- <button onClick='ShowOracleDetail()'  type="button" class="btn btn-lg btn-block btn-primary">Learn More</button> --}}
           </div>
         </div>
         <div class="card mb-4 box-shadow">
