--- a/views/index.hbs
+++ b/views/index.hbs
@@ -302,7 +302,7 @@
             </ul>
             <h1 class="card-title pricing-card-title">$90 <small class="text-muted">/ hr</small>
             </h1>
-            <button onclick="benConsulting()" type="button" class="btn btn-lg btn-block btn-primary" href="https://benmnewell.wixsite.com/website">Get started</button>
+            <button onclick="benConsulting()" type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
             
           </div>
         </div>
