add section div to previous engagements.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -496,6 +496,8 @@
                     </p>- Tableau Consultant (Tableau Suite)</p>
 	                  </p>- Tableau Server Technical Analyst IV / Support (Tableau Suite)</p>
 	                  </p>- Associate Business Data Specialist (SQL, ETL, Tableau Desktop) </p>
+                    <div style='border-top: solid; border-color: white;'>
+                    </div> 
                 </div>
               </div>
             </div>
@@ -525,6 +527,8 @@
                   	</p>- Oracle Insight & Cloud Strategy Program Manager</p>
 	                  </p>- Senior Business Intelligence Analyst</p>
 	                  </p>- Business Systems Analyst</p>
+                    <div style='border-top: solid; border-color: white;'>
+                    </div>
                 </div>
               </div>
             </div>
