fixed anchors on page.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -40,7 +40,7 @@
               <a class="nav-link js-scroll-trigger" href="#intro" style='font-weight: bold; font-size: 15px;'>HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="#services">SERVICES</a>
+              <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="#newToAnalytics">SERVICES</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="#about">ABOUT US</a>
@@ -547,7 +547,7 @@
     </div>
 
     <footer>     
-      <div class="container">
+      <div id='contact' class="container">
         <p>&copy; Created by Lift LLC. All Rights Reserved.</p>
         <p>No affiliation with Tableau or Oracle.</p>
         <br>
