fixed anchors on page.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -40,7 +40,7 @@
               <a class="nav-link js-scroll-trigger" href="#intro" style='font-weight: bold; font-size: 15px;'>HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="#newToAnalytics">SERVICES</a>
+              <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="#titleSubTop">SERVICES</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="#about">ABOUT US</a>
