add liftinsights route

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -42,6 +42,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="#titleSubTop">SERVICES</a>
             </li>
+            {{!-- <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="/liftinsights">PRODUCTS</a>
+            </li> --}}
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" style='font-size: 15px; font-weight: bold' href="#about">ABOUT US</a>
             </li>
