Update website text

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -83,7 +83,7 @@
             MISSION | PROVIDE LIFT<br><br>
           </h3>
           <div href="#about" class='row'>
-            <button  onClick='showNewToAnalytics()'style="font-size:13px; height: 50px; width:300px" type="button" class="btn btn-block btn-light">New to Data/Analytics?</button>
+            <button  onClick='showNewToAnalytics()'style="font-size:13px; height: 50px; width:300px" type="button" class="btn btn-block btn-light">New to Data Analytics?</button>
           </div>&nbsp;
           <div class='row' style='height: 10px'>
           </div>
@@ -115,7 +115,7 @@
         <br> 
         <div>
           <h1 id='title' style='color: #1F7FC3'>
-            NEW TO ANALYTICS
+            NEW TO DATA ANALYTICS
           </h1>
         </div>
         <div class="container marketing">
@@ -295,13 +295,15 @@
           </div>
           <h5>Ben M. Newell, MBA </h5>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>6+ years Development/Training experience</li>
-              <br>
               <li>
-                <a href="https://www.tableau.com/support/certification">Tableau Desktop 10.1 Qualified Associate</a> 
+                <a href="https://www.tableau.com/support/certification">Tableau Desktop Qualified Associate</a> 
               </li>
               <br>
-              <li>2 years Tableau Server customer support</li>
+              <li>10+ years of Analytical Development experience</li>
+              <br>
+              <li>4+ years of Analytical Training experience</li>
+              <br>
+              <li>4+ years Tableau Server customer support</li>
             </ul>
             <h1 class="card-title pricing-card-title">$90 <small class="text-muted">/ hr</small>
             </h1>
@@ -487,7 +489,7 @@
                  Founder / Tableau Consultant
                 </p>
                 <p>
-                  Ben has been a student of the Business Intelligence space for 5+ years and recently added Full Stack Web Development to his qualifications. He is versed in the Tableau Suite and obtained his Tableau Desktop 10.1 Qualified Associates certification. Loves to discuss strategy, business objectives, and user experience.
+                  Ben has been a student of the Business Intelligence space for 10+ years and recently added Full Stack Web Development to his qualifications. He is versed in the Tableau Suite and obtained his Tableau Desktop Qualified Associate certification in 2019. Loves to discuss strategy, business objectives, and user experience.
                 </p>
                 <div class='row'>
                   <button onClick= 'showBenEngagements()' style="padding-top: 10px; font-size: 15px; height: 50px; width:300px" type="button" class="btn btn-light">
@@ -496,9 +498,20 @@
                   <br>
                 </div>
                 <div id='benEngagements' style='display: none;'>
-                    </p>- Tableau Consultant (Tableau Suite)</p>
-	                  </p>- Tableau Server Technical Analyst IV / Support (Tableau Suite)</p>
-	                  </p>- Associate Business Data Specialist (SQL, ETL, Tableau Desktop) </p>
+                    <br>
+                    <a>Tableau Consultant / Programmer</a>
+                    <br>
+                    <a style='color:#1B1B1E; font-size: 12px'>(Tableau Suite, AWS, Python, Web Development)</a>
+                    <br><br>
+	                  <a>Tableau Server Technical Analyst IV / Support </a>
+                    <br>
+                    <a style='color:#1B1B1E; font-size: 12px'>(Tableau Suite)</a>
+                    <br><br>
+	                  <a>Associate Business Data Specialist</a>
+                    <br>
+                    <a style='color:#1B1B1E; font-size: 12px'>(SQL, ETL, Tableau Desktop) </a>
+                    <br>
+                    <br>
                     <div style='border-top: solid; border-color: white;'>
                     </div> 
                     <br>
@@ -519,7 +532,7 @@
                   Founder / Oracle Consultant
                 </p>
                 <p>
-                  Zach brings 5+ years of Oracle BI implementation experience to the team! He is certified in Oracle Analytics Cloud and is heavily experienced with OBIEE 11g and 12c. During his BI projects he loves to spend time discussing the overall enterprise strategy towards reporting, data quality, and system integration.
+                  Zach brings 7+ years of Oracle BI implementation experience to the team! He received his certification in Oracle Analytics Cloud in 2017 and is heavily experienced with custom OBIEE 11g and 12c solutions. He has directly supported other Oracle Applications including Oracle Financials and HCM specializing in Oracle Security for these applications. During his BI projects he loves to spend time discussing the overall enterprise strategy towards system integration, data quality, and reporting solutions.
                 </p>
                 <div class='row'>
                   <button onClick= 'showZachEngagements()' style="padding-top: 10px; font-size: 15px; height: 50px; width:300px" type="button" class="btn btn-light">
