--- a/views/index.hbs
+++ b/views/index.hbs
@@ -541,9 +541,27 @@
                   <br>
                 </div>
                 <div id='zachEngagements' style='display: none;'>
+                    <br>
+                    <a>Oracle Insight & Cloud Strategy Program Manager</a>
+                    <br>
+                    <a style='color:#1B1B1E; font-size: 12px'>(OBIEE, Oracle Administrator (RPD), SQL, HTML/CSS)</a>
+                    <br><br>
+	                  <a>Senior Business Intelligence Analyst</a>
+                    <br>
+                    <a style='color:#1B1B1E; font-size: 12px'>(OBIEE, SQL, HTML/CSS)</a>
+                    <br><br>
+	                  <a>Business Systems Analyst</a>
+                    <br>
+                    <a style='color:#1B1B1E; font-size: 12px'>(OBIEE, Discoverer, SQL, Microsoft VBA) </a>
+                    <br>
+                    <br>
+                    <div style='border-top: solid; border-color: white;'>
+                    </div> 
+                    <br>
+
                   	</p>- Oracle Insight & Cloud Strategy Program Manager</p>
-	                  </p>- Senior Business Intelligence Analyst</p>
-	                  </p>- Business Systems Analyst</p>
+	                  </p>- </p>
+	                  </p>- </p>
                     <div style='border-top: solid; border-color: white;'>
                     </div>
                 </div>
